Fix score style on small screens

--- a/assets/css/2048.css
+++ b/assets/css/2048.css
@@ -356,7 +356,6 @@ html {
   }
 
   .score {
-    background-color: rgb(128, 128, 128);
     font-size: 80%;
     height: 70px;
     padding-top: 5px;
